--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,23 @@
 {
-  "type": "project",
-  "description": "Mini Framework",
-  "license": "MIT",
-  "require": {
-    "php": ">=8.1.0",
-    "filp/whoops": "^2.1",
-    "zircote/swagger-php": "^5.1",
-    "phpmailer/phpmailer": "^6.9",
-    "doctrine/annotations": "^2.0",
-    "aws/aws-sdk-php": "^3.369"
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "App",
-      "System\\": "System"
-    }
-  },
-  "config": {
-    "preferred-install": "dist"
-  }
+   "type": "project",
+   "description": "Mini Framework",
+   "license": "MIT",
+   "require": {
+      "php": ">=8.1.0",
+      "filp/whoops": "^2.1",
+      "zircote/swagger-php": "^5.1",
+      "phpmailer/phpmailer": "^6.9",
+      "doctrine/annotations": "^2.0",
+      "aws/aws-sdk-php": "^3.369",
+      "egulias/email-validator": "^4.0"
+   },
+   "autoload": {
+      "psr-4": {
+         "App\\": "App",
+         "System\\": "System"
+      }
+   },
+   "config": {
+      "preferred-install": "dist"
+   }
 }
