--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
    "description": "Mini Framework",
    "license": "MIT",
    "require": {
-      "php": ">=8.1.0",
+      "php": ">=8.2.0",
       "filp/whoops": "^2.1",
       "zircote/swagger-php": "^5.1",
       "phpmailer/phpmailer": "^6.9",
@@ -18,6 +18,9 @@
       }
    },
    "config": {
-      "preferred-install": "dist"
+      "preferred-install": "dist",
+      "platform": {
+         "php": "8.2.0"
+      }
    }
 }
